# ModOne

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  C  CLAUDE.md  COORDINATE_DEBUGGING_GUIDE.md  bash.exe.stackdump  bing_xg5000.html  ddg_xg5000.html  index.html  new-onecanvas.md  package-lock.json  package.json  parsing_example.xml  playwright.browser.config.ts  playwright.config.ts  playwright.native.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  witty-moseying-cherny.md
.claude/: settings.local.json
.cursor/: ladderStore_migration.txt
.github/workflows/: e2e.yml
.ouroboros/seeds/: symbol-editor-completeness.yaml
.sisyphus/: boulder.json  ralph-loop.local.md  symbol-editor-polish-checklist.md  symbol-editor-polish-context-notes.md  symbol-editor-power-checklist.md
.sisyphus/drafts/: canvas-ui-integration.md  wire-selection-port-visibility.md
.sisyphus/evidence/: task-1-all-tests-pass.txt  task-1-build-pass.txt  task-1-canonical-builder-tests.txt  task-1-cargo-check.txt  task-1-lsp-clean.txt  task-1-single-blockrenderer.txt  task-1-unit-tests-pass.txt  task-10-toolbox.txt  task-11-validation.txt  task-12-editor-shell.txt  task-2-all-tests-pass.txt  task-2-block-size-audit.md  task-2-build.txt  task-2-cargo-check.txt  task-2-dead-code-cleanup.txt  task-2-lsp-clean.txt  task-2-menubar-guard.txt  task-2-tests.txt  task-3-build.txt  task-3-full-suite-pass.txt  task-3-no-code-changes.txt  task-3-plugin-config.txt  task-3-port-consumers.md  task-3-schema-validation.txt  task-3-scope-check.txt  task-3-uuid-check.txt  task-3-wire-tests-pass.txt  task-4-blocktype-additive.txt  task-4-build.txt  task-4-single-blocktype.txt  task-4-single-cleanup-path.txt  task-4-type-system.txt  task-5-bounds-in-event.txt  task-5-build.txt  task-5-builtin-upgrade.txt  task-6-build.txt  task-6-frontend-symbol-layer.txt  task-6-loading-and-sync-fix.txt  task-6-test-suite.txt  task-7-final.txt  (+6 more)
.sisyphus/plans/: canvas-ui-integration.md  custom-symbol-infra.md  custom_titlebar.md  fix-clearActiveTool-test.md  macos-titlebar-restore.md  onecanvas-stability-fixes.md  symbol-model-migration.md  (+8 more)
.taskmaster/: AGENTS.md  state.json
assets/: XG5000_XGK_SYSFLAGS.CSV
crates/modbus-codec/: Cargo.toml
crates/modbus-codec/src/: adapter.rs  lib.rs  memory.rs  pdu.rs  policy.rs  types.rs
crates/modone-audit/: Cargo.toml
crates/modone-audit/src/: lib.rs  state.rs  store.rs  types.rs
crates/modone-contract/: Cargo.toml
crates/modone-contract/src/: adapter.rs  clock.rs  cpu.rs  event_bus.rs  field_link.rs  lib.rs  link.rs  memory.rs  runtime_env.rs  types.rs
crates/opcua-codec/: Cargo.toml
crates/opcua-codec/src/: adapter.rs  address_space_spec.rs  backend.rs  dirty_tracker.rs  error.rs  lib.rs  mapping.rs  memory.rs
crates/opcua-codec/src/mapping/: byte_order.rs  config.rs  convert.rs  deadband.rs  mod.rs  scaling.rs  store.rs  string_codec.rs  types.rs
crates/opcua-codec/src/mapping/tests/: byte_order_read_tests.rs  config_store_tests.rs  decomposition_tests.rs  int_mapping_tests.rs  mod.rs
crates/plc-model/: Cargo.toml
crates/plc-model/src/: hardware.rs  lib.rs  profile.rs
crates/plc-model/src/profiles/: ls.rs  melsec.rs
crates/sim-engine/: Cargo.toml
crates/sim-engine/src/: debugger.rs  executor.rs  lib.rs  memory.rs  tag_registry.rs  timer.rs  types.rs
crates/sim-wasm/: Cargo.toml  README.md
crates/sim-wasm/demo/: run.mjs
crates/sim-wasm/src/: lib.rs
docs/: ladder-dual-grid-architecture.md  modbus-backend-audit-2026-03-12.md  multi-selection-rebuild.md  opcua-crate-capability-assessment.md  opcua-migration-impact.md  opcua-phase1-api-patterns.md  opcua-session-detail-api-research.md  plc-memory-opcua-readiness-2026-03-12.md  xgwx-reverse-engineering.md
playwright-report/: index.html
scripts/: cdp-act.mjs  cdp-click.mjs  cdp-invoke.mjs  cdp-probe.mjs  convert-symbols-to-xml.ts  debug-xml-parse.ts  generate-symbol-xmls.mjs  modbus_probe.py  opcua_probe.py  tauri-dev-project.ps1  verify-equivalent-move.mjs  verify-xml-roundtrip.ts  with-perl.ps1
src/: AGENTS.md  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: AGENTS.md  error.rs  lib.rs  logging.rs
src-tauri/src/canvas/: mod.rs  scope.rs  scope_sync.rs
src-tauri/src/commands/: canvas.rs  canvas_sync.rs  explorer.rs  layout.rs  licensing.rs  logging.rs  menu.rs  mod.rs  modbus.rs  network.rs  nodeset2_export.rs  opcua.rs  parser.rs  project.rs  scenario.rs  schematic.rs  scope_sim.rs  settings.rs  sim.rs  symbols.rs  tag_import_export.rs  tags.rs  window.rs
src-tauri/src/licensing/: crypto.rs  keygen.rs  mod.rs  store.rs
src-tauri/src/modbus/: adapter.rs  generator.rs  memory.rs  mod.rs  pdu.rs  rtu.rs  tauri_sink.rs  tcp.rs  telemetry.rs  types.rs
src-tauri/src/network/: ip_alias.rs  mod.rs
src-tauri/src/opcua/: CRATE_EVALUATION.md  adapter.rs  adapter_backend_tests.rs  address_space.rs  address_space_spec.rs  audit.rs  auth.rs  backend.rs  backend_impl.rs  control.rs  dirty_tracker.rs  mapping.rs  mapping_project_tests.rs  memory.rs  mod.rs  node_values.rs  server.rs  types.rs
src-tauri/src/parser/: csv_reader.rs  mod.rs  modbus_mapper.rs  types.rs  xg5000.rs
src-tauri/src/plc_runtime/: event_bus.rs  memory.rs  mod.rs  modbus_policy.rs  profile.rs
src-tauri/src/plc_runtime/profiles/: ls.rs  melsec.rs  mod.rs
src-tauri/src/project/: auto_save.rs  config.rs  folder_project.rs  layout.rs  manifest.rs  migration.rs  mod.rs  mop_file.rs  recovery.rs  validation.rs
src-tauri/src/scenario/: executor.rs  mod.rs  types.rs
src-tauri/src/sim/: audit.rs  canvas_sync.rs  counter.rs  cpu_node.rs  debugger.rs  engine.rs  executor.rs  memory.rs  mod.rs  modserver_sync.rs  monitoring.rs  protocol_runtime.rs  runtime_host.rs  tag_events.rs  tag_registry.rs  timer.rs  types.rs
src-tauri/src/symbols/: mod.rs  project_block_loader.rs  storage.rs  types.rs  xml_parser.rs
src-tauri/tests/: node_values_pure_test.rs  opcua_integration.rs  opcua_session_smoke.rs  opcua_test_support.rs
(+1163 files in other folders)
