[package]
name = "modone"
version = "0.1.0"
description = "ModOne - Mod Manager for games"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# File handling
zip = "0.6"
tempfile = "3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Logging
log = "0.4"

# Modbus memory and protocol
bitvec = "1"
parking_lot = "0.12"

# Serial port for Modbus RTU
tokio-serial = "5"
serialport = "4"

# App directories
directories = "5"
