[package]
name = "modone"
version = "0.1.0"
description = "ModOne - Mod Manager for games"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "rlib"]
test = false

[features]
default = ["opcua-server"]
opcua-server = ["dep:opcua"]
webdriver = ["dep:tauri-plugin-webdriver"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared wasm/native contract crate. native 셸이므로 std-clock(기본 features) 활성화.
modone-contract = { path = "../crates/modone-contract" }
# vendor-neutral PLC 모델 (하드웨어 타입 + VendorProfile)
plc-model = { path = "../crates/plc-model" }
# PLC 사이클 실행기 코어 (전송/tokio 없는 순수 시뮬레이션)
sim-engine = { path = "../crates/sim-engine" }
# Modbus 코덱/메모리/어댑터 (전송 비의존, wasm·native 공용)
modbus-codec = { path = "../crates/modbus-codec" }
# OPC UA pure core (codec/address-space spec/adapter/backend trait)
opcua-codec = { path = "../crates/opcua-codec" }
# 도메인 무관 SQLite 감사 로그 엔진 (opcua·runtime 운영 감사 공용)
modone-audit = { path = "../crates/modone-audit" }

# Tauri core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-webdriver = { version = "0.1", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# File handling
zip = "0.6"
tempfile = "3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Logging
log = "0.4"

# Modbus memory and protocol
bitvec = "1"
parking_lot = "0.12"

# Serial port for Modbus RTU
tokio-serial = "5"
serialport = "4"

# OPC UA server/client
opcua = { version = "0.12", features = ["server", "client", "vendored-openssl"], optional = true }

# App directories
directories = "5"

# CSV parsing
csv = "1.3"

# XML generation (NodeSet2 export)
quick-xml = "0.38"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Certificate metadata parsing
sha2 = "0.10"
x509-parser = "0.16"

# Password hashing for OPC UA user accounts
bcrypt = "0.16"

# SQLite for audit log and future HDA
rusqlite = { version = "0.31", features = ["bundled"] }

# Licensing
machine-uid = "0.5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
ed25519-dalek = "2"
reqwest = { version = "0.12", features = ["json"] }
