[package]
name = "modbus-codec"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
modone-contract = { path = "../modone-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bitvec = "1"
parking_lot = "0.12"

# wasm 타깃에서 의존 트리의 uuid 가 getrandom(js) 백엔드를 쓰도록 feature 를
# 통일한다. modone-contract(§3 wasm-purity 부채)를 A 가 정식 상환하기 전까지의
# 임시 통일 — 계약 코드/표면은 건드리지 않고 manifest 에서 additive feature 만 켠다.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }

[dev-dependencies]
tempfile = "3"
