[package]
name = "modbus-codec"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
# A가 계약 §3 wasm-purity를 clock 주입으로 정식 상환 → default-features=false 로
# 의존해 wasm에서 chrono/uuid를 끌어오지 않는다(native 셸이 std-clock 활성화).
# 이전의 wasm-target uuid js 임시 통일은 제거됨.
modone-contract = { path = "../modone-contract", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bitvec = "1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
