[package]
name = "modone-audit"
version = "0.1.0"
edition = "2021"
description = "도메인 무관 SQLite append-only 감사 로그 엔진 (저장/조회/보존)"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
log = "0.4"

[dev-dependencies]
tempfile = "3"
