[package]
name = "sim-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
modone-contract = { path = "../modone-contract" }
plc-model = { path = "../plc-model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "1"
# 시간/ID는 modone-contract::runtime_env 가 공급(wasm 자기완결). 직접 chrono/uuid
# 의존 없음.
