[package]
name = "sim-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
# 시간/ID는 modone-contract::clock 이 공급. default-features=false 로 의존해
# wasm에서 chrono/uuid 컴파일 회피(native 셸이 std-clock 활성화).
modone-contract = { path = "../modone-contract", default-features = false }
plc-model = { path = "../plc-model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "1"
